Project Source Added

--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="components/profile/source"/>
 	<classpathentry kind="src" path="components/core/source"/>
 	<classpathentry kind="src" path="project/properties"/>
+	<classpathentry kind="src" path="components/project/source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_43">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
