Tiles separated based on the components

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-    
+
     <display-name>TimeSheet</display-name>
 
     <filter>
@@ -20,8 +20,8 @@
     </listener>
 
     <context-param>
-        <param-name>tilesDefinitions</param-name>
-        <param-value>/WEB-INF/tiles.xml</param-value>
+        <param-name>org.apache.tiles.impl.BasicTilesContainer.DEFINITIONS_CONFIG</param-name>
+        <param-value>/WEB-INF/tiles.xml, /components/profile/tiles/tiles-profile.xml</param-value>
     </context-param>
 
     <welcome-file-list>
